--- a/cameraviewer.qss
+++ b/cameraviewer.qss
@@ -1,7 +1,11 @@
 
 QWidget{
         color: rgb(221, 221, 221);
-        font: 10pt "Segoe UI";
+/*       font: 10pt "Segoe UI"; */
+}
+
+QLabel {
+    text-align: center;
 }
 
 #Whole_Frame {
@@ -12,6 +16,18 @@ QWidget{
 #Left_Panel {
         background-color: rgb(33, 37, 43);
 
+}
+
+#connect_button {
+    background-color: rgb(0,0,0);
+}
+
+#rescan_button {
+    background-color: rgb(0,0,0);
+}
+
+#add_virtual_button {
+    background-color: rgb(0,0,0);
 }
 
 #graphicsView {
