--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -95,7 +95,7 @@
         <widget class="QGraphicsView" name="graphicsView_2">
          <property name="geometry">
           <rect>
-           <x>190</x>
+           <x>210</x>
            <y>70</y>
            <width>30</width>
            <height>30</height>
@@ -171,7 +171,20 @@
           <rect>
            <x>130</x>
            <y>40</y>
-           <width>49</width>
+           <width>81</width>
+           <height>16</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+        </widget>
+        <widget class="QLabel" name="CameraModel">
+         <property name="geometry">
+          <rect>
+           <x>140</x>
+           <y>60</y>
+           <width>71</width>
            <height>16</height>
           </rect>
          </property>
