--- a/cameraviewer.qss
+++ b/cameraviewer.qss
@@ -86,7 +86,10 @@ QLabel {
     subcontrol-origin: margin;
 }
 
-
+#tableWidget {
+    color: rgb(0,0,0);
+/*    background-color: rgb(0,0,0); */
+}
 
 
 /*
