--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -81,7 +81,7 @@
         <property name="geometry">
          <rect>
           <x>0</x>
-          <y>220</y>
+          <y>260</y>
           <width>261</width>
           <height>111</height>
          </rect>
@@ -197,7 +197,7 @@
         <property name="geometry">
          <rect>
           <x>0</x>
-          <y>130</y>
+          <y>170</y>
           <width>261</width>
           <height>91</height>
          </rect>
@@ -260,7 +260,7 @@
           <x>0</x>
           <y>0</y>
           <width>261</width>
-          <height>131</height>
+          <height>171</height>
          </rect>
         </property>
         <property name="frameShape">
@@ -292,7 +292,7 @@
          <property name="geometry">
           <rect>
            <x>90</x>
-           <y>100</y>
+           <y>130</y>
            <width>75</width>
            <height>24</height>
           </rect>
@@ -305,7 +305,7 @@
          <property name="geometry">
           <rect>
            <x>170</x>
-           <y>100</y>
+           <y>130</y>
            <width>75</width>
            <height>24</height>
           </rect>
@@ -320,7 +320,7 @@
            <x>10</x>
            <y>20</y>
            <width>231</width>
-           <height>71</height>
+           <height>101</height>
           </rect>
          </property>
          <property name="selectionMode">
@@ -342,15 +342,42 @@
           <property name="text">
            <string>ID</string>
           </property>
+          <property name="foreground">
+           <brush brushstyle="SolidPattern">
+            <color alpha="255">
+             <red>0</red>
+             <green>0</green>
+             <blue>0</blue>
+            </color>
+           </brush>
+          </property>
          </column>
          <column>
           <property name="text">
            <string>Model</string>
           </property>
+          <property name="foreground">
+           <brush brushstyle="SolidPattern">
+            <color alpha="255">
+             <red>0</red>
+             <green>0</green>
+             <blue>0</blue>
+            </color>
+           </brush>
+          </property>
          </column>
          <column>
           <property name="text">
            <string>Connected</string>
+          </property>
+          <property name="foreground">
+           <brush brushstyle="SolidPattern">
+            <color alpha="255">
+             <red>0</red>
+             <green>0</green>
+             <blue>0</blue>
+            </color>
+           </brush>
           </property>
          </column>
         </widget>
@@ -358,7 +385,7 @@
          <property name="geometry">
           <rect>
            <x>10</x>
-           <y>100</y>
+           <y>130</y>
            <width>75</width>
            <height>24</height>
           </rect>
