the acquisition loop does not end until the camera stops sending frames

--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -419,7 +419,7 @@
       <rect>
        <x>320</x>
        <y>19</y>
-       <width>191</width>
+       <width>451</width>
        <height>61</height>
       </rect>
      </property>
@@ -485,6 +485,27 @@
       </property>
       <property name="alignment">
        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+     <widget class="QLabel" name="view_record_label">
+      <property name="geometry">
+       <rect>
+        <x>210</x>
+        <y>20</y>
+        <width>151</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>16</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>View Mode</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
       </property>
      </widget>
     </widget>
