--- a/cameraviewer.qss
+++ b/cameraviewer.qss
@@ -34,6 +34,9 @@ QLabel {
     background-color: rgb(0,0,0);
 }
 
+#change_save_button {
+    background-color: rgb(0,0,0);
+}
 #snapshot_button {
     background-color: rgb(0,0,0);
 }
