--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -35,7 +35,7 @@
        <x>0</x>
        <y>0</y>
        <width>261</width>
-       <height>471</height>
+       <height>531</height>
       </rect>
      </property>
      <property name="sizePolicy">
@@ -56,7 +56,7 @@
         <x>0</x>
         <y>0</y>
         <width>259</width>
-        <height>469</height>
+        <height>529</height>
        </rect>
       </property>
       <property name="contextMenuPolicy">
@@ -83,7 +83,7 @@
           <x>0</x>
           <y>330</y>
           <width>261</width>
-          <height>101</height>
+          <height>191</height>
          </rect>
         </property>
         <property name="frameShape">
@@ -190,6 +190,78 @@
          </property>
          <property name="text">
           <string/>
+         </property>
+        </widget>
+        <widget class="QSlider" name="gain_slider">
+         <property name="geometry">
+          <rect>
+           <x>170</x>
+           <y>110</y>
+           <width>81</width>
+           <height>20</height>
+          </rect>
+         </property>
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+        </widget>
+        <widget class="QSlider" name="exposure_slider">
+         <property name="geometry">
+          <rect>
+           <x>170</x>
+           <y>140</y>
+           <width>81</width>
+           <height>20</height>
+          </rect>
+         </property>
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+        </widget>
+        <widget class="QLabel" name="label_11">
+         <property name="geometry">
+          <rect>
+           <x>10</x>
+           <y>110</y>
+           <width>41</width>
+           <height>17</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>Gain:</string>
+         </property>
+        </widget>
+        <widget class="QLabel" name="label_12">
+         <property name="geometry">
+          <rect>
+           <x>10</x>
+           <y>140</y>
+           <width>111</width>
+           <height>21</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>Exposure (ms)</string>
+         </property>
+        </widget>
+        <widget class="QSpinBox" name="gain_box">
+         <property name="geometry">
+          <rect>
+           <x>120</x>
+           <y>110</y>
+           <width>44</width>
+           <height>26</height>
+          </rect>
+         </property>
+        </widget>
+        <widget class="QSpinBox" name="exposure_box">
+         <property name="geometry">
+          <rect>
+           <x>120</x>
+           <y>140</y>
+           <width>44</width>
+           <height>26</height>
+          </rect>
          </property>
         </widget>
        </widget>
