--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -328,7 +328,7 @@
         <widget class="QLabel" name="label_10">
          <property name="geometry">
           <rect>
-           <x>10</x>
+           <x>90</x>
            <y>80</y>
            <width>91</width>
            <height>21</height>
@@ -341,9 +341,9 @@
         <widget class="QLabel" name="save_path_label">
          <property name="geometry">
           <rect>
-           <x>100</x>
-           <y>80</y>
-           <width>151</width>
+           <x>10</x>
+           <y>100</y>
+           <width>241</width>
            <height>20</height>
           </rect>
          </property>
@@ -357,8 +357,8 @@
         <widget class="QPushButton" name="change_save_button">
          <property name="geometry">
           <rect>
-           <x>10</x>
-           <y>110</y>
+           <x>60</x>
+           <y>130</y>
            <width>131</width>
            <height>31</height>
           </rect>
@@ -711,8 +711,20 @@
      <height>22</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuFile">
+    <property name="title">
+     <string>File</string>
+    </property>
+    <addaction name="actionLoad_Configuration"/>
+   </widget>
+   <addaction name="menuFile"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <action name="actionLoad_Configuration">
+   <property name="text">
+    <string>Load Configuration</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections/>
