--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -284,7 +284,7 @@
          <property name="geometry">
           <rect>
            <x>50</x>
-           <y>10</y>
+           <y>0</y>
            <width>161</width>
            <height>20</height>
           </rect>
@@ -303,7 +303,7 @@
          <property name="geometry">
           <rect>
            <x>144</x>
-           <y>40</y>
+           <y>30</y>
            <width>91</width>
            <height>31</height>
           </rect>
@@ -316,7 +316,7 @@
          <property name="geometry">
           <rect>
            <x>20</x>
-           <y>40</y>
+           <y>30</y>
            <width>91</width>
            <height>31</height>
           </rect>
@@ -328,22 +328,22 @@
         <widget class="QLabel" name="label_10">
          <property name="geometry">
           <rect>
-           <x>90</x>
-           <y>80</y>
+           <x>10</x>
+           <y>90</y>
            <width>91</width>
            <height>21</height>
           </rect>
          </property>
          <property name="text">
-          <string>Save File Path: </string>
+          <string>Save File Name: </string>
          </property>
         </widget>
-        <widget class="QLabel" name="save_path_label">
+        <widget class="QLabel" name="save_name_label">
          <property name="geometry">
           <rect>
-           <x>10</x>
-           <y>100</y>
-           <width>241</width>
+           <x>110</x>
+           <y>90</y>
+           <width>141</width>
            <height>20</height>
           </rect>
          </property>
@@ -367,6 +367,53 @@
           <string>Change Save File Path</string>
          </property>
         </widget>
+        <widget class="QLabel" name="label_13">
+         <property name="geometry">
+          <rect>
+           <x>10</x>
+           <y>110</y>
+           <width>111</width>
+           <height>21</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>Save File Directory: </string>
+         </property>
+        </widget>
+        <widget class="QLabel" name="label_14">
+         <property name="geometry">
+          <rect>
+           <x>100</x>
+           <y>70</y>
+           <width>81</width>
+           <height>21</height>
+          </rect>
+         </property>
+         <property name="font">
+          <font>
+           <pointsize>12</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>Save File</string>
+         </property>
+        </widget>
+        <widget class="QLabel" name="save_folder_label">
+         <property name="geometry">
+          <rect>
+           <x>130</x>
+           <y>110</y>
+           <width>121</width>
+           <height>20</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>Current Directory</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+         </property>
+        </widget>
        </widget>
        <widget class="QFrame" name="frame_2">
         <property name="geometry">
@@ -374,7 +421,7 @@
           <x>0</x>
           <y>0</y>
           <width>261</width>
-          <height>171</height>
+          <height>161</height>
          </rect>
         </property>
         <property name="frameShape">
